--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ pillow = "^10.0.0"
 requests = "^2.31.0"
 numpy = "^1.24.0"
 tqdm = "^4.65.0"
+accelerate = "^0.20.0"
+bitsandbytes = "^0.41.0"
+sentencepiece = "^0.1.99"
+protobuf = "^4.21.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
